--- a/src/styles.css
+++ b/src/styles.css
@@ -10,15 +10,17 @@ body {
   background-color: rgb(250, 249, 228);
   font-family: Lora;
   overflow-x: hidden;
+  
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 980px) {
+  html,
   body {
+    width: 100%;
+    height: 223vh;
+    margin: 0;
+    padding: 0;
     overflow-x: hidden;
-    display: none;
-  }
-  .sampleText{
-    display: none;
   }
 }
 
@@ -28,7 +30,7 @@ body {
 
 .homeText {
   position: relative;
-  z-index: 50;
+  z-index: 40;
   top: 20%;
   left: 10.5%;
   color: white;
@@ -38,6 +40,24 @@ body {
   max-width: 40%;
   margin-left: 2.5%;
 }
+
+@media only screen and (max-width: 980px) {
+
+  .homeText {
+    position: relative;
+    z-index: 40;
+    top: 30%;
+    left: 8.5%;
+    color: white;
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 40px;
+    max-width: 40%;
+    margin-left: 2.5%;
+  }
+
+}
+
 
 .homePage {
   background-image: linear-gradient(
@@ -50,6 +70,23 @@ body {
   width: 100%;
   height: 90vh;
 }
+
+@media only screen and (max-width: 980px) {
+
+  .homePage {
+    background-image: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 1),
+        rgba(255, 255, 255, 0)
+      ),
+      url("./images/background-image.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 40vh;
+  }
+
+}
+
 .breaker {
   margin: auto;
   margin-top: 2%;
@@ -67,31 +104,43 @@ body {
   background-position: 0 100%;
   background-repeat: no-repeat;
   transition: background-size 0.5s ease-in-out;
-  
 }
 
 .link-underline-black {
-    background-image: linear-gradient(transparent, transparent),
+  background-image: linear-gradient(transparent, transparent),
     linear-gradient(rgb(254, 204, 42), rgb(254, 204, 42));
-  
 }
 
 .link-underline:hover {
   background-size: 100% 3px;
   background-position: 0 100%;
-  
 }
 
 /* <!......................Samples Section......................!> */
 .sampleText {
   display: flex;
+  width: fit-content;
   /* margin-top: auto; */
   position: relative;
-  left: 950px;
+  left: 67%;
   bottom: 320px;
   font-size: 30px;
   font-weight: bold;
 }
+
+@media only screen and (max-width: 980px){
+  .sampleText {
+    display: flex;
+    width: fit-content;
+    position: relative;
+    left: 67%;
+    bottom: 280px;
+    font-size: 30px;
+    font-weight: bold;
+  }
+}
+
+
 .writtenText {
   margin-right: 5px;
   word-break: break-word;
@@ -101,14 +150,13 @@ body {
 .transitionText {
   position: relative;
   top: 90px;
-  left: -270px;
+  left: -265px;
   color: red;
 }
 
 .carouselParent {
   margin-top: 10%;
   margin-bottom: 1%;
-  
 }
 .sampleHeader {
   font-weight: 900;
@@ -116,17 +164,27 @@ body {
   font-size: 40px;
   margin: 4%;
   margin-top: 15%;
-  padding-top: 2%;
+  padding-top: 4%;
 }
+
+@media only screen and (max-width: 980px){
+  .sampleHeader {
+    font-weight: 900;
+    text-align: center;
+    font-size: 40px;
+    margin: 4%;
+    margin-top: 15%;
+    padding-top: 8%;
+  }
+}
+
 .carouselChild {
   display: inline-block;
   width: 60%;
   height: 60%;
   margin-right: auto;
   margin-left: 4%;
-  box-shadow: 0px 0px 46px 7px rgba(255,23,23,1);
-
-
+  box-shadow: 0px 0px 46px 7px rgba(255, 23, 23, 1);
 }
 
 .sampleBackground {
@@ -136,7 +194,7 @@ body {
 }
 
 .carouselImages {
-  
+
 }
 
 /* !.............................Services Offered...............................! */
@@ -150,6 +208,18 @@ body {
   padding: 6%;
 }
 
+@media only screen and (max-width: 980px) {
+  .servicesOffered {
+    background: url("./images/servicesBackground.png");
+    background-size: cover;
+    width: 100%;
+    height: 40vh;
+    padding: 6%;
+  }
+}
+
+
+
 /* !.............................Features..............................! */
 
 .featuresBackground {
@@ -159,8 +229,6 @@ body {
 }
 
 /* ...............................Testimonials................................ */
-
-
 
 /* ...............................About Us................................ */
 
@@ -172,4 +240,16 @@ body {
   /* background-color: rgb(252, 241, 241); */
   background-color: rgb(248, 244, 180);
   padding: 6%;
+}
+
+@media only screen and (max-width: 980px) {
+  .aboutUs {
+    background: url("./images/servicesBackground.png");
+    background-size: cover;
+    width: 100%;
+    height: 20vh;
+
+    background-color: rgb(248, 244, 180);
+    padding: 6%;
+  }
 }
